; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_sec.c_BTM_SecBondByTransport.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_sec.c_BTM_SecBondByTransport.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BT_TRANSPORT_LE = common dso_local global i64 0, align 8
@BT_DEVICE_TYPE_BLE = common dso_local global i32 0, align 4
@BT_TRANSPORT_BR_EDR = common dso_local global i64 0, align 8
@BT_DEVICE_TYPE_BREDR = common dso_local global i32 0, align 4
@BTM_ILLEGAL_ACTION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @BTM_SecBondByTransport(i32 %0, i64 %1, i32 %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i64 %1, i64* %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @BTM_ReadDevInfo(i32 %14, i32* %12, i32* %13)
  %16 = load i64, i64* %8, align 8
  %17 = load i64, i64* @BT_TRANSPORT_LE, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %24

19:                                               ; preds = %5
  %20 = load i32, i32* %12, align 4
  %21 = load i32, i32* @BT_DEVICE_TYPE_BLE, align 4
  %22 = and i32 %20, %21
  %23 = icmp eq i32 %22, 0
  br i1 %23, label %33, label %24

24:                                               ; preds = %19, %5
  %25 = load i64, i64* %8, align 8
  %26 = load i64, i64* @BT_TRANSPORT_BR_EDR, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %28, label %35

28:                                               ; preds = %24
  %29 = load i32, i32* %12, align 4
  %30 = load i32, i32* @BT_DEVICE_TYPE_BREDR, align 4
  %31 = and i32 %29, %30
  %32 = icmp eq i32 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %28, %19
  %34 = load i32, i32* @BTM_ILLEGAL_ACTION, align 4
  store i32 %34, i32* %6, align 4
  br label %42

35:                                               ; preds = %28, %24
  %36 = load i32, i32* %7, align 4
  %37 = load i64, i64* %8, align 8
  %38 = load i32, i32* %9, align 4
  %39 = load i32*, i32** %10, align 8
  %40 = load i32*, i32** %11, align 8
  %41 = call i32 @btm_sec_bond_by_transport(i32 %36, i64 %37, i32 %38, i32* %39, i32* %40)
  store i32 %41, i32* %6, align 4
  br label %42

42:                                               ; preds = %35, %33
  %43 = load i32, i32* %6, align 4
  ret i32 %43
}

declare dso_local i32 @BTM_ReadDevInfo(i32, i32*, i32*) #1

declare dso_local i32 @btm_sec_bond_by_transport(i32, i64, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
